# IsaacLab-Imitation

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  REPO_SETUP.md  pixi.toml  pyrefly.toml
data/: README.md
docker/: Dockerfile.base  (+3 more)
source/isaaclab_imitation/: pyproject.toml  setup.py  test_causal_planner_observation.py  test_g1_latent_bilinear_config.py  test_g1_metrics_contract.py  test_policy_supervision_contract.py  test_reference_patch_env.py
source/isaaclab_imitation/config/: extension.toml
source/isaaclab_imitation/isaaclab_imitation/: ui_extension_example.py
source/isaaclab_imitation/isaaclab_imitation/assets/robots/: unitree.py
source/isaaclab_imitation/isaaclab_imitation/envs/: __init__.py  causal_planner_observation.py  imitation_rl_env.py  rlopt.py  torchrl.py
source/isaaclab_imitation/isaaclab_imitation/manifests/: g1_dance102_manifest.json  g1_lafan1_manifest.template.json
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/: imitation_env_cfg.py  lafan1_manifest.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/config/digit3/: __init__.py  imitation_digit3_env_cfg.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/config/g1/: __init__.py  imitation_g1_env_cfg.py  imitation_g1_latent_ablation_env_cfg.py  imitation_g1_latent_env_cfg.py  imitation_g1_latent_vqvae_env_cfg.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/mdp/: __init__.py  _compiled.py  commands.py  events.py  observations.py  rewards.py  terminations.py
(+336 files in other folders)
